<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="stratford.monikers.newGame"
    android:orientation="vertical">

    <TextView
        android:id="@+id/gameCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newGameCode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/generatedCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/gameCodeTextView"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/enterDisplayNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterDisplayName"
        app:layout_constraintBottom_toTopOf="@+id/usernameInput"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_above="@+id/joinBlue"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:fontFamily="casual"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="80dp" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/joinBlue"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_above="@+id/joinBlue"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:textColorLink="?android:attr/colorForeground"
        android:textCursorDrawable="@null"
        android:backgroundTint="@android:color/black" />
    <TextView
        android:id="@+id/chooseTeamTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseTeam"
        app:layout_constraintBottom_toTopOf="@+id/usernameInput"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_above="@+id/joinBlue"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:fontFamily="casual"
        android:textSize="18sp"
        android:layout_marginTop="70dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:gravity="bottom"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/joinRed"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onClickCreateRed"
            android:text="@string/joinRedButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_below="@+id/usernameInput"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_dark"
            android:layout_weight="0.50"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:fontFamily="casual" />

        <Button
            android:id="@+id/joinBlue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onClickCreateBlue"
            android:text="@string/joinBlueButton"
            app:layout_constraintBottom_toTopOf="@+id/joinRed"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/joinRed"
            android:layout_toEndOf="@+id/joinRed"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_light"
            android:layout_weight="0.5"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="casual" />
    </LinearLayout>
</LinearLayout>
